@@ -1,3 +1,10 @@
+2010-05-07  Shujing Zhao  <pearly.zhao@oracle.com>
+
+	* gcc.dg/ordered-comparison-1.c: New test.
+	* gcc.dg/ordered-comparison-2.c: New test.
+	* gcc.dg/ordered-comparison-3.c: New test.
+	* gcc.dg/ordered-comparison-4.c: New test.
+
 2010-05-06  Mike Stump  <mikestump@comcast.net>
 
 	PR objc/35165
